caption margin adjusted, bottom padding shifted to top in photoset LIs to avoid double spacing

--- a/theme/sass/post_types/_all.scss
+++ b/theme/sass/post_types/_all.scss
@@ -91,3 +91,8 @@
 	}
 
 }
+
+.caption {
+    width: 70%;
+    margin: 20px auto 0;
+}
