--- a/theme/sass/post_types/_photoset.scss
+++ b/theme/sass/post_types/_photoset.scss
@@ -1,3 +1,10 @@
 .photo-wrapper {
 	display: none;
 }
+
+.photo-slideshow {
+
+    [class*="block-grid-"]>li {
+        padding: 1.25rem 0.625rem 0;
+    }
+}
